A few largish changes: - overhauled the action mapper, combining the old and new strategies to give a fairly explicit mapping with prettier urls - prettified the dashboard urls and refactored untemplated config view so that it can also be used for the user's preferences - updated the wizard to allow for "non-linear" wizards, such as the subscription wizard which forks differently for personal and project subscriptions